--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.delitto.izumo</groupId>
     <artifactId>framework</artifactId>
-    <version>1.1.7-SNAPSHOT</version>
+    <version>1.3.3-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -22,9 +22,9 @@
         <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <kotlin.version>1.4.0</kotlin.version>
-        <mirai.version>2.6.7</mirai.version>
-        <kotlinx.version>1.3.5</kotlinx.version>
+        <kotlin.version>1.5.10</kotlin.version>
+        <mirai.version>2.7.1-dev-1</mirai.version>
+        <kotlinx.version>1.5.0</kotlinx.version>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/net.mamoe/mirai-core-jvm -->
@@ -32,8 +32,17 @@
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-jvm</artifactId>
             <version>${mirai.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jetbrains.kotlin</groupId>
+                    <artifactId>kotlin-stdlib-common</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jetbrains.kotlin</groupId>
+                    <artifactId>kotlin-stdlib</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
@@ -94,6 +103,13 @@
             <artifactId>jcommander</artifactId>
             <version>1.78</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.1</version>
+        </dependency>
+
 
 
     </dependencies>
